fix(Datepicker): fix z-index back to 9999

--- a/frappe/public/scss/common/datepicker.scss
+++ b/frappe/public/scss/common/datepicker.scss
@@ -5,7 +5,7 @@
 .datepicker {
 	direction: ltr;
 	font-family: inherit;
-	z-index: 5;
+	z-index: 9999 !important;
 	background: var(--fg-color);
 	color: var(--text-color);
 	border-radius: var(--border-radius);
